fix .ui-map-viewer .info z-index

--- a/src/app.css
+++ b/src/app.css
@@ -940,6 +940,7 @@ input[type=number]::-webkit-outer-spin-button {
 	justify-content: center;
 	white-space: nowrap;
 	flex-wrap: wrap;
+	z-index: 5;
 }
 .ui-map-viewer .info span {
 	margin: 0 10px;
